[package]
name = "bunbun"
description = "A simple and adorable sysinfo utility."
authors = ["Muhammad Nauman Raza <devraza@skiff.com>"]
version = "1.5.0"
edition = "2021"
categories = ["command-line-utilities"]
license-file = "LICENSE"
readme = "README.md"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
owo-colors = "4.1.0"
sysinfo = "0.32.0"
whoami = "1.5.2"

[profile.release]
strip = true # Strip debug symbols
opt-level = "z" # Optimise for size
lto = true # Enable link type optimisation
codegen-units = 1 # Reduce parallel code generation units
panic = "abort" # Abort on panic!
