[package]
name = "bunbun"
description = "A simple and adorable sysinfo utility."
authors = ["Muhammad Nauman Raza <devraza.hazard643@slmail.me>"]
version = "1.5.0"
edition = "2021"
categories = ["command-line-utilities"]
license-file = "LICENSE"
readme = "README.md"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
owo-colors = "4.1.0"
sysinfo = "0.33.1"
whoami = "2.0.0-pre.0"

[profile.release]
strip = true # Strip debug symbols
opt-level = "z" # Optimise for size
lto = true # Enable link type optimisation
codegen-units = 1 # Reduce parallel code generation units
panic = "abort" # Abort on panic!
